Fixed : Excercise Colors

--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
 
 <body>
   <!-- Start coding here -->
+  <div id="back">
+    <div class="box">
+      <h1>Welcome to CSS Color</h1>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla pharetra lorem sem, vitae consequat libero molestie a. Cras velit erat, scelerisque sed arcu non, pellentesque porttitor purus. Maecenas vestibulum ultrices purus dictum hendrerit. Morbi suscipit ornare sagittis. Fusce volutpat sit amet eros ut porta. Sed mollis tincidunt nunc in scelerisque. Morbi iaculis tincidunt molestie. Proin euismod vel dolor sed laoreet.</p>
+    </div>
+  </div>
 </body>
 
 </html>
