--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
 
 <body>
   <!-- Start coding here -->
+  <div class="background">
+    <div class="box">
+      <h1>👾Welcome to CSS Color👾</h1>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus a dui id nisi hendreri rit aliquet. Nunc odio sem n, consectetur ac quam quis, vulputate ullancorper neque. Suspendisse varius efficitur mattis. Donec porta massa lorem, at volutpat enim consectetur semper. Null llam dapibus eget bulum. Sed suscipit sapien sed nibh bibendum, vel dictum lectus elementum. Curabitur et diam mauris. Sed ac convallis ante. Phasellus consectetur sollicitudin nunc venenatis rutrum. Nulla ullamcorper, nibh a porttitor aliquam, lco sem maximus justo, ac sagittis dui nulla ut massa. Duis vitae cursus mi, nec placerat tellus. Maecenas a erat et sapien volutpat aliquet. et diam eu vestibulu</p>
+    </div>
+  </div>
 </body>
 
 </html>
+
